temp/objects/RevRecRuleCategory__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Deferred__c</fullName>
        <label>Actual Deferred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category_End_Date__c</fullName>
        <label>Category End Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Start_Date__c</fullName>
        <label>Category Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Type__c</fullName>
        <label>Category Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Qty</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Split__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Item__c</fullName>
        <label>#Line Item</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Amount__c</fullName>
        <label>Projected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Percent__c</fullName>
        <label>Projected Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Qty__c</fullName>
        <label>Projected Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recognition_Type__c</fullName>
        <label>Recognition Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevRecRuleSplitCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RevRecRuleSplitCategory</label>
        <referenceTo>RevRecRuleCategory__c</referenceTo>
        <relationshipLabel>RevRecRuleCategorys (RevRecProductRuleSplitCategory)</relationshipLabel>
        <relationshipName>RevRecRuleCategorys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RevRecRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RevRecRule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RevRecRules__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RevRecRules__c</referenceTo>
        <relationshipLabel>RevRecRuleCategorys</relationshipLabel>
        <relationshipName>RevRecRuleCategorys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Category_support__c</fullName>
        <label>Sub-Category support</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ultimate_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ultimate Parent</label>
        <referenceTo>RevRecRuleCategory__c</referenceTo>
        <relationshipLabel>RevRecRuleCategorys</relationshipLabel>
        <relationshipName>RevRecRuleCategorys</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RevRecRuleCategory</label>
    <nameField>
        <label>RevRecRuleCategory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RevRecRuleCategorys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>